feat: drag and drop accessibility
Initial experiments, created tree demo
pluged in the DragAnd Drop lifecycle
managed to initiate drag start fit space on tree node

Signed-off-by: Vasil Atanasov <vsatanasov@gmail.com>

--- a/packages/angular/projects/dev/src/app/drag-and-drop/drag-and-drop.demo.html
+++ b/packages/angular/projects/dev/src/app/drag-and-drop/drag-and-drop.demo.html
@@ -1,5 +1,5 @@
 <!--
-  ~ Copyright (c) 2016-2020 VMware, Inc. All Rights Reserved.
+  ~ Copyright (c) 2016-2021 VMware, Inc. All Rights Reserved.
   ~ This software is released under MIT license.
   ~ The full license information can be found in LICENSE in the root directory of this project.
   -->
@@ -13,5 +13,6 @@
   <li><a [routerLink]="['./droppable']">Basic Droppable</a></li>
   <li><a [routerLink]="['./drop-tolerance']">Drop Tolerance</a></li>
   <li><a [routerLink]="['./grouping']">Grouping</a></li>
+  <li><a [routerLink]="['./tree-accessibility']">Tree Accessibility</a></li>
 </ul>
 <router-outlet></router-outlet>
