--- a/packages/angular/projects/dev/src/app/drag-and-drop/drag-and-drop.demo.html
+++ b/packages/angular/projects/dev/src/app/drag-and-drop/drag-and-drop.demo.html
@@ -14,5 +14,6 @@
   <li><a [routerLink]="['./drop-tolerance']">Drop Tolerance</a></li>
   <li><a [routerLink]="['./grouping']">Grouping</a></li>
   <li><a [routerLink]="['./tree-accessibility']">Tree Accessibility</a></li>
+  <li><a [routerLink]="['./card-accessibility']">Card Accessibility</a></li>
 </ul>
 <router-outlet></router-outlet>
